name:                bing-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rubenmoor/bing-api#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Bing
                     , Network.Bing.Types
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , data-default
                     , lens
                     , lens-aeson
                     , text
                     , text-show
                     , wreq
  default-language:    Haskell2010

executable bing-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bing-api
                     , data-default
                     , text-show
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/bing-api
